fix: update modpack name

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Baby's First Modpack",
+  "name": "BabysFirstModpack",
   "version_number": "1.0.0",
   "website_url": "",
   "description": "A modpack of the best character, item, skin, and QOL mods - so you don't have to do it yourself",
