feat: add TooManyFriends, remove inferno

--- a/manifest.json
+++ b/manifest.json
@@ -26,8 +26,6 @@
     "marklow-PrestigiousSkinpack-1.4.2",
     "KingEnderBrine-LobbySkinsFix-1.2.0",
     "dotflare-LostThroughTimeSkinPack-1.1.2",
-    "Moffein-AI_Blacklist-1.5.3",
-    "HIFU-Inferno-1.5.1",
     "KrononConspirator-MadVeteran_Skinpack-1.4.2",
     "OkIGotIt-Infinite_Shrine_of_the_Mountain-1.0.3",
     "TheMysticSword-MysticsRisky2Utils-2.0.8",
@@ -60,6 +58,7 @@
     "dan8991iel-LunarCoinShareOnPickup-4.2.1",
     "MetrosexualFruitcake-CustomEmotesAPI-1.9.4",
     "MetrosexualFruitcake-BadAssEmotes-1.6.0",
-    "EnforcerGang-Rocket-0.7.0"
+    "EnforcerGang-Rocket-0.7.0",
+    "wildbook-TooManyFriends-1.2.1"
   ]
 }
