--- a/manifest.json
+++ b/manifest.json
@@ -1,63 +1,80 @@
 {
   "name": "BabysFirstModpack",
-  "version_number": "1.1.0",
+  "version_number": "2.0.0",
   "website_url": "",
   "description": "A modpack of the best character item skin and QOL mods so you don't have to do it yourself",
   "dependencies": [
-    "bbepis-BepInExPack-5.4.2103",
-    "XoXFaby-BetterUI-2.7.6",
-    "RiskofThunder-HookGenPatcher-1.2.3",
-    "tristanmcpherson-R2API-5.0.3",
-    "NotTsunami-ShowDeathCause-3.0.1",
+    "Chen-ChensHelpers-1.1.2",
     "Cuno-DiscordRichPresence-1.2.0",
-    "Rune580-Risk_Of_Options-2.5.3",
-    "EnforcerGang-HAND_OVERCLOCKED-1.1.12",
-    "Ethanol10-Ganondorf_Mod-3.1.3",
     "EnforcerGang-Enforcer-3.7.4",
-    "EnforcerGang-MinerUnearthed-1.9.4",
-    "PopcornFactory-DarthVaderMod-2.1.3",
-    "TheTimesweeper-Alien_Hominid-0.3.1",
+    "EnforcerGang-HAND_OVERCLOCKED-1.2.3",
+    "EnforcerGang-MinerUnearthed-1.9.7",
+    "EnforcerGang-Rocket-0.7.3",
+    "Ethanol10-Ganondorf_Mod-3.1.3",
+    "Fam-BabysFirstModpack-1.1.0",
+    "Gnome-ChefMod-2.2.8",
+    "HasteReapr-AssassinMod-1.2.0",
+    "KingEnderBrine-LobbySkinsFix-1.2.1",
     "KingEnderBrine-ScrollableLobbyUI-1.7.6",
     "KomradeSpectre-Aetherium-0.6.8",
-    "Skell-GoldenCoastPlus-0.6.3",
-    "William758-ZetArtifacts-1.4.4",
-    "William758-ZetAspects-2.7.22",
-    "marklow-PrestigiousSkinpack-1.4.2",
-    "KingEnderBrine-LobbySkinsFix-1.2.0",
-    "dotflare-LostThroughTimeSkinPack-1.1.2",
     "KrononConspirator-MadVeteran_Skinpack-1.4.2",
-    "OkIGotIt-Infinite_Shrine_of_the_Mountain-1.0.3",
-    "TheMysticSword-MysticsRisky2Utils-2.0.8",
-    "TheMysticSword-MysticsItems-2.1.1",
-    "RiskofThunder-R2API_Core-5.0.3",
-    "RiskofThunder-R2API_Unlockable-1.0.0",
-    "RiskofThunder-R2API_TempVisualEffect-1.0.0",
-    "RiskofThunder-R2API_Sound-1.0.0",
-    "RiskofThunder-R2API_SceneAsset-1.0.0",
-    "RiskofThunder-R2API_RecalculateStats-1.0.0",
-    "RiskofThunder-R2API_Prefab-1.0.1",
-    "RiskofThunder-R2API_Orb-1.0.0",
+    "MagnusMagnuson-ShrineOfDio-1.6.1",
+    "MetrosexualFruitcake-BadAssEmotes-1.6.6",
+    "MetrosexualFruitcake-CustomEmotesAPI-2.1.3",
+    "Moffein-Bosses_Drop_Items-1.3.0",
+    "MoriyaFaith-RMOR_REFORGED-1.3.1",
+    "NotTsunami-ShowDeathCause-3.0.1",
+    "OkIGotIt-Infinite_Shrine_of_the_Mountain-1.0.4",
+    "Paladin_Alliance-PaladinMod-1.6.3",
+    "PopcornFactory-Arsonist_Mod-1.0.4",
+    "RiskofThunder-BepInEx_GUI-3.0.2",
+    "RiskofThunder-FixPluginTypesSerialization-1.0.3",
+    "RiskofThunder-HookGenPatcher-1.2.3",
+    "RiskofThunder-R2API_ArtifactCode-1.0.1",
+    "RiskofThunder-R2API_Colors-1.0.1",
+    "RiskofThunder-R2API_CommandHelper-1.0.1",
+    "RiskofThunder-R2API_ContentManagement-1.0.2",
+    "RiskofThunder-R2API_Core-5.0.10",
+    "RiskofThunder-R2API_DamageType-1.0.4",
+    "RiskofThunder-R2API_Deployable-1.0.1",
+    "RiskofThunder-R2API_Difficulty-1.1.2",
+    "RiskofThunder-R2API_Director-1.1.2",
+    "RiskofThunder-R2API_Dot-1.0.1",
+    "RiskofThunder-R2API_Elites-1.0.3",
+    "RiskofThunder-R2API_Items-1.0.3",
+    "RiskofThunder-R2API_Language-1.0.1",
+    "RiskofThunder-R2API_Loadout-1.0.2",
+    "RiskofThunder-R2API_LobbyConfig-1.0.1",
     "RiskofThunder-R2API_Networking-1.0.2",
-    "RiskofThunder-R2API_LobbyConfig-1.0.0",
-    "RiskofThunder-R2API_Loadout-1.0.0",
-    "RiskofThunder-R2API_Language-1.0.0",
-    "RiskofThunder-R2API_Items-1.0.1",
-    "RiskofThunder-R2API_Elites-1.0.0",
-    "RiskofThunder-R2API_Dot-1.0.0",
-    "RiskofThunder-R2API_Director-1.0.0",
-    "RiskofThunder-R2API_Difficulty-1.0.2",
-    "RiskofThunder-R2API_Deployable-1.0.0",
-    "RiskofThunder-R2API_DamageType-1.0.0",
-    "RiskofThunder-R2API_ContentManagement-1.0.1",
-    "RiskofThunder-R2API_CommandHelper-1.0.0",
-    "RiskofThunder-R2API_ArtifactCode-1.0.0",
-    "TeamMoonstorm-MoonstormSharedUtils-1.2.0",
-    "TeamMoonstorm-Starstorm2-0.3.46",
-    "RiskofThunder-R2API_Colors-1.0.0",
+    "RiskofThunder-R2API_Orb-1.0.1",
+    "RiskofThunder-R2API_Prefab-1.0.3",
+    "RiskofThunder-R2API_RecalculateStats-1.2.0",
+    "RiskofThunder-R2API_SceneAsset-1.1.1",
+    "RiskofThunder-R2API_Skins-1.0.0",
+    "RiskofThunder-R2API_Sound-1.0.2",
+    "RiskofThunder-R2API_TempVisualEffect-1.0.2",
+    "RiskofThunder-R2API_Unlockable-1.0.2",
+    "RiskofThunder-RoR2BepInExPack-1.10.0",
+    "RumblingJOSEPH-VoidItemAPI-1.1.0",
+    "Rune580-Risk_Of_Options-2.6.1",
+    "Skell-GoldenCoastPlus-0.6.3",
+    "TeamMoonstorm-MoonstormSharedUtils-1.5.4",
+    "TeamMoonstorm-Starstorm2-0.4.5",
+    "TheMysticSword-MysticsItems-2.1.7",
+    "TheMysticSword-MysticsRisky2Utils-2.0.8",
+    "TheTimesweeper-Alien_Hominid-0.3.2",
+    "TheWarlock117-Link-1.2.2",
+    "ThinkInvis-TILER2-7.4.0",
+    "William758-ZetArtifacts-1.4.7",
+    "William758-ZetAspects-2.7.26",
+    "XoXFaby-BetterUI-2.7.6",
+    "Zenithrium-VanillaVoid-1.4.13",
+    "bbepis-BepInExPack-5.4.2113",
     "dan8991iel-LunarCoinShareOnPickup-4.2.1",
-    "MetrosexualFruitcake-CustomEmotesAPI-1.9.4",
-    "MetrosexualFruitcake-BadAssEmotes-1.6.0",
-    "EnforcerGang-Rocket-0.7.0",
-    "wildbook-TooManyFriends-1.2.1"
+    "dotflare-LostThroughTimeSkinPack-1.1.3",
+    "duckduckgreyduck-ArtificerExtended-3.4.1",
+    "marklow-PrestigiousSkinpack-1.4.2",
+    "tristanmcpherson-R2API-5.0.5",
+    "wildbook-TooManyFriends-1.2.2"
   ]
 }
