feat: Add 30 skinpacks

--- a/manifest.json
+++ b/manifest.json
@@ -1,79 +1,107 @@
 {
   "name": "BabysFirstModpack",
-  "version_number": "2.0.0",
+  "version_number": "2.1.0",
   "website_url": "",
   "description": "A modpack of the best character item skin and QOL mods so you don't have to do it yourself",
   "dependencies": [
-    "Chen-ChensHelpers-1.1.2",
-    "Cuno-DiscordRichPresence-1.2.0",
-    "EnforcerGang-Enforcer-3.7.4",
-    "EnforcerGang-HAND_OVERCLOCKED-1.2.3",
-    "EnforcerGang-MinerUnearthed-1.9.7",
-    "EnforcerGang-Rocket-0.7.3",
-    "Ethanol10-Ganondorf_Mod-3.1.3",
-    "Gnome-ChefMod-2.2.8",
-    "HasteReapr-AssassinMod-1.2.0",
-    "KingEnderBrine-LobbySkinsFix-1.2.1",
-    "KingEnderBrine-ScrollableLobbyUI-1.7.6",
-    "KomradeSpectre-Aetherium-0.6.8",
-    "KrononConspirator-MadVeteran_Skinpack-1.4.2",
-    "MagnusMagnuson-ShrineOfDio-1.6.1",
-    "MetrosexualFruitcake-BadAssEmotes-1.6.6",
-    "MetrosexualFruitcake-CustomEmotesAPI-2.1.3",
-    "Moffein-Bosses_Drop_Items-1.3.0",
-    "MoriyaFaith-RMOR_REFORGED-1.3.1",
-    "NotTsunami-ShowDeathCause-3.0.1",
-    "OkIGotIt-Infinite_Shrine_of_the_Mountain-1.0.4",
-    "Paladin_Alliance-PaladinMod-1.6.3",
-    "PopcornFactory-Arsonist_Mod-1.0.4",
-    "RiskofThunder-BepInEx_GUI-3.0.2",
-    "RiskofThunder-FixPluginTypesSerialization-1.0.3",
-    "RiskofThunder-HookGenPatcher-1.2.3",
-    "RiskofThunder-R2API_ArtifactCode-1.0.1",
-    "RiskofThunder-R2API_Colors-1.0.1",
-    "RiskofThunder-R2API_CommandHelper-1.0.1",
-    "RiskofThunder-R2API_ContentManagement-1.0.2",
-    "RiskofThunder-R2API_Core-5.0.10",
-    "RiskofThunder-R2API_DamageType-1.0.4",
-    "RiskofThunder-R2API_Deployable-1.0.1",
-    "RiskofThunder-R2API_Difficulty-1.1.2",
-    "RiskofThunder-R2API_Director-1.1.2",
-    "RiskofThunder-R2API_Dot-1.0.1",
-    "RiskofThunder-R2API_Elites-1.0.3",
-    "RiskofThunder-R2API_Items-1.0.3",
-    "RiskofThunder-R2API_Language-1.0.1",
-    "RiskofThunder-R2API_Loadout-1.0.2",
-    "RiskofThunder-R2API_LobbyConfig-1.0.1",
-    "RiskofThunder-R2API_Networking-1.0.2",
-    "RiskofThunder-R2API_Orb-1.0.1",
-    "RiskofThunder-R2API_Prefab-1.0.3",
-    "RiskofThunder-R2API_RecalculateStats-1.2.0",
-    "RiskofThunder-R2API_SceneAsset-1.1.1",
-    "RiskofThunder-R2API_Skins-1.0.0",
-    "RiskofThunder-R2API_Sound-1.0.2",
-    "RiskofThunder-R2API_TempVisualEffect-1.0.2",
-    "RiskofThunder-R2API_Unlockable-1.0.2",
-    "RiskofThunder-RoR2BepInExPack-1.10.0",
-    "RumblingJOSEPH-VoidItemAPI-1.1.0",
-    "Rune580-Risk_Of_Options-2.6.1",
-    "Skell-GoldenCoastPlus-0.6.3",
-    "TeamMoonstorm-MoonstormSharedUtils-1.5.4",
-    "TeamMoonstorm-Starstorm2-0.4.5",
-    "TheMysticSword-MysticsItems-2.1.7",
-    "TheMysticSword-MysticsRisky2Utils-2.0.8",
-    "TheTimesweeper-Alien_Hominid-0.3.2",
-    "TheWarlock117-Link-1.2.2",
-    "ThinkInvis-TILER2-7.4.0",
-    "William758-ZetArtifacts-1.4.7",
-    "William758-ZetAspects-2.7.26",
-    "XoXFaby-BetterUI-2.7.6",
-    "Zenithrium-VanillaVoid-1.4.13",
-    "bbepis-BepInExPack-5.4.2113",
-    "dan8991iel-LunarCoinShareOnPickup-4.2.1",
     "dotflare-LostThroughTimeSkinPack-1.1.3",
-    "duckduckgreyduck-ArtificerExtended-3.4.1",
-    "marklow-PrestigiousSkinpack-1.4.2",
+    "bbepis-BepInExPack-5.4.2113",
     "tristanmcpherson-R2API-5.0.5",
-    "wildbook-TooManyFriends-1.2.1"
+    "wildbook-TooManyFriends-1.2.1",
+    "marklow-PrestigiousSkinpack-1.4.2",
+    "duckduckgreyduck-ArtificerExtended-3.4.1",
+    "dan8991iel-LunarCoinShareOnPickup-4.2.1",
+    "Zenithrium-VanillaVoid-1.4.13",
+    "XoXFaby-BetterUI-2.7.6",
+    "William758-ZetAspects-2.7.26",
+    "William758-ZetArtifacts-1.4.7",
+    "ThinkInvis-TILER2-7.4.0",
+    "TheTimesweeper-Alien_Hominid-0.3.2",
+    "TheMysticSword-MysticsRisky2Utils-2.0.8",
+    "TheMysticSword-MysticsItems-2.1.7",
+    "TeamMoonstorm-MoonstormSharedUtils-1.5.5",
+    "TeamMoonstorm-Starstorm2-0.4.5",
+    "Skell-GoldenCoastPlus-0.6.3",
+    "Rune580-Risk_Of_Options-2.6.1",
+    "RumblingJOSEPH-VoidItemAPI-1.1.0",
+    "RiskofThunder-RoR2BepInExPack-1.10.0",
+    "RiskofThunder-HookGenPatcher-1.2.3",
+    "RiskofThunder-R2API_Core-5.0.10",
+    "RiskofThunder-R2API_Unlockable-1.0.2",
+    "RiskofThunder-R2API_TempVisualEffect-1.0.2",
+    "RiskofThunder-R2API_Sound-1.0.2",
+    "TheWarlock117-Link-1.2.2",
+    "RiskofThunder-R2API_Skins-1.0.0",
+    "RiskofThunder-R2API_SceneAsset-1.1.1",
+    "RiskofThunder-R2API_RecalculateStats-1.2.0",
+    "RiskofThunder-R2API_Prefab-1.0.3",
+    "RiskofThunder-R2API_Orb-1.0.1",
+    "RiskofThunder-R2API_Networking-1.0.2",
+    "RiskofThunder-R2API_LobbyConfig-1.0.1",
+    "RiskofThunder-R2API_Loadout-1.0.2",
+    "RiskofThunder-R2API_Language-1.0.1",
+    "RiskofThunder-R2API_Items-1.0.3",
+    "RiskofThunder-R2API_Elites-1.0.3",
+    "RiskofThunder-R2API_Dot-1.0.1",
+    "RiskofThunder-R2API_Director-1.1.2",
+    "RiskofThunder-R2API_Difficulty-1.1.2",
+    "RiskofThunder-R2API_Deployable-1.0.1",
+    "RiskofThunder-R2API_DamageType-1.0.4",
+    "RiskofThunder-R2API_ContentManagement-1.0.2",
+    "RiskofThunder-R2API_CommandHelper-1.0.1",
+    "RiskofThunder-R2API_Colors-1.0.1",
+    "RiskofThunder-R2API_ArtifactCode-1.0.1",
+    "RiskofThunder-FixPluginTypesSerialization-1.0.3",
+    "RiskofThunder-BepInEx_GUI-3.0.2",
+    "PopcornFactory-Arsonist_Mod-1.0.4",
+    "Paladin_Alliance-PaladinMod-1.6.3",
+    "OkIGotIt-Infinite_Shrine_of_the_Mountain-1.0.4",
+    "NotTsunami-ShowDeathCause-3.0.1",
+    "MoriyaFaith-RMOR_REFORGED-1.3.1",
+    "Moffein-Bosses_Drop_Items-1.3.0",
+    "MetrosexualFruitcake-CustomEmotesAPI-2.1.4",
+    "MetrosexualFruitcake-BadAssEmotes-1.7.0",
+    "MagnusMagnuson-ShrineOfDio-1.6.1",
+    "KrononConspirator-MadVeteran_Skinpack-1.4.2",
+    "KomradeSpectre-Aetherium-0.6.8",
+    "KingEnderBrine-ScrollableLobbyUI-1.7.6",
+    "KingEnderBrine-LobbySkinsFix-1.2.1",
+    "HasteReapr-AssassinMod-1.2.0",
+    "Gnome-ChefMod-2.2.8",
+    "Ethanol10-Ganondorf_Mod-3.1.3",
+    "EnforcerGang-Rocket-0.7.3",
+    "EnforcerGang-MinerUnearthed-1.9.7",
+    "EnforcerGang-HAND_OVERCLOCKED-1.2.3",
+    "EnforcerGang-Enforcer-3.7.4",
+    "Cuno-DiscordRichPresence-1.2.0",
+    "Chen-ChensHelpers-1.1.2",
+    "Fam-BabysFirstModpack-2.0.0",
+    "Smxrez-SmoreSkins-0.8.0",
+    "TheBestAssociatedLargelyLudicrousSillyheadGroup-AspectSkins-1.0.1",
+    "12GaugeAwayFromFace-Artificer_Academic_Skin-1.0.4",
+    "Liamono-Fem_Commando-1.2.0",
+    "KingEnderBrine-Mercenary2B-1.3.0",
+    "marklow-HellfireCaptain-1.2.2",
+    "duckduckgreyduck-LazyBastardEngineer-2.2.1",
+    "TailLover-MewtwoArtificer-1.0.3",
+    "Liamono-Fem_Paladin-1.3.0",
+    "MipoeBaku-PaimonSkinPlugin-1.3.0",
+    "marklow-KanagawaSkinpack-1.1.1",
+    "Limeyhoney-GildedSurvivors-3.0.1",
+    "Voidcrid-Voidcrid-1.5.2",
+    "12GaugeAwayFromFace-Commando_Elite_Trooper_Skin-1.2.2",
+    "Catsune-Voidbound_Railgunner_Skin-1.0.1",
+    "RuneFox237-FemSpyroHuntress-1.0.4",
+    "MAVRI-CaptainUnderglowDrip-1.1.1",
+    "TeamRocket-Trans_Huntress-6.9.0",
+    "Heyimnoob-PrideSkins-1.0.0",
+    "Nix-Tamari_Huntress-1.0.0",
+    "Nix-A_Certain_Scientific_Railgunner-1.3.0",
+    "Nix-KeiyozaMerc-1.0.0",
+    "Nix-Frog_Mask-1.0.1",
+    "SethC-ChildrenOfTheGrove-1.6.0",
+    "PlasticRogue-Dark_Samus_Void_Fiend-1.0.1",
+    "SethC-MysticalArtificer-1.0.0",
+    "Lodington-Thiccify-2.0.6"
   ]
 }
